Updated the app content
Changed the source to retrieve the solution mapper data from BCT site.

--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
 </head>
 
 <body>
-My Git App
+BCT Solution Mapper
+
+<iframe src="http://www.bahwancybertek.com/solution-mapper/browse_solutions.php" height="600" width="100%" ></iframe>
 </body>
 </html>
